DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.0.1 released - 8.29.2005]===================================================
Aug-29-2005 patrickh    NEW VERSION: 1.0.1
Aug-17-2005 patrickh    Removed the unused namespace snx::FileIO and all its
                        members.

[1.0.0 released - 7.5.2005]====================================================
Jul-07-2005 patrickh    NEW VERSION: 1.0.0
Jun-15-2005 patrickh    Updated to support Windows 64-bit edition.
                        NEW VERSION: 0.93.1

[1.0 Beta 3 released - 6.7.2005]===============================================
Jun-07-2005 patrickh    NEW VERSION: 0.93.0

[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0

[1.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 0.91.0
Nov-18-2004 patrickh    Moved the sonix class into the snx namespace.  Renamed
                        the namespaces snxEndian and snxFileIO to snx::Endian
                        and snx::FileIO.
                        NEW VERSION: 0.5.0
Nov-17-2004 patrickh    Fixed potential problems with polymorphic Sonix types
                        not being compiled into the sonix library correctly.
                        NEW VERSION: 0.4.1
Apr-11-2004 patrickh    Sonix now depends on an installed version of GMTL.
Dec-01-2003 patrickh    Removed the deletePlugin() function from the required
                        list of entry points a Sonix plug-in must implement.
                        Now, snx::ISoundImplementation defines a pure virtual
                        destroy() method that must be implemented.
                        NEW VERSION: 0.3.0
Nov-29-2003 chooze      Removed XDL in favor of using vpr::Library.
                        NEW VERSION: 0.3.0
Nov-27-2003 patrickh    Moved the plug-in code from snx/plugins into plugins