@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Jul-08-2006 patrick     Added support for building universal binaries on Mac
+                        OS X.
+
 [1.0.1 released - 8.29.2005]===================================================
 Aug-29-2005 patrickh    NEW VERSION: 1.0.1
 Aug-17-2005 patrickh    Removed the unused namespace snx::FileIO and all its
